<resources>
    <string name="app_name">English Dictionary</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search_word">Enter your word to search</string>
    <string name="new_word">New Word</string>
    <string name="history">history</string>
    <string name="favorite">favorite</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="bookmarks">bookmarks</string>
    <string name="share">share</string>
    <string name="bookmark">Bookmark</string>
    <string name="copy">Copy</string>
    <string name="pronunciation"><b>Pronunciation</b></string>
    <string name="partOfSpeech"><b>Part Of Speech</b></string>
    <string name="meanings"><b>Meaning</b></string>
    <string name="save">save</string>
    <string name="sound">sound</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="loading">loading . . .</string>
    <string name="definition">definition</string>

</resources>