<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/wordSearched"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/copy"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/wordSearched"
        app:layout_constraintTop_toBottomOf="@+id/wordSearched" />
    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
        android:text="@string/share"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/copy"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/wordSearched" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/copy"
        app:layout_constraintEnd_toEndOf="@id/wordSearched"
        app:layout_constraintStart_toEndOf="@+id/copy"
        app:layout_constraintTop_toTopOf="@id/copy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="@id/copy"
        app:layout_constraintRight_toRightOf="@id/save"
        app:layout_constraintTop_toBottomOf="@+id/wordSearched"
        app:layout_constraintVertical_bias="0.143">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/BoldSize"
                android:text="@string/sound" />

            <TextView
                android:id="@+id/soundDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/BoldSize" />

            <TextView
                android:id="@+id/partOfSpeech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/BoldSize"

                android:text="@string/partOfSpeech" />

            <TextView
                android:id="@+id/partOfSpeechDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/BoldSize" />

            <TextView
                android:id="@+id/meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/BoldSize"

                android:text="@string/meanings" />

            <TextView
                android:id="@+id/meaningDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/BoldSize" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>